--- a/index.html
+++ b/index.html
@@ -3,44 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first program</title>
+    <title>Rustam Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: rgb(182, 225, 225);">
-   <title> my first program     </title> 
-   <img src="rustam.png" alt="description" width="400" height="400" > 
-<h1 style="color: rgb(238, 9, 9);text-align: center;"> MY PORT FOLIO</h1>
-<H2>MY NAME  - RUSTAM RAJ
-<BR></BR>
-CURRENT INFORMATION -  <BR></BR>
-</H2>
-<H3>Hey my name is Rustam raj and i am from nawada <br>
-bihar</H3>
-<p>
-    i am creating this page to showcase my html learning which i am going to learn in the upcoming days so stays close 
-</p>
+<body>
+   <section>
+<img id="image" src="rustam.png" alt="my image">
 
-<h4>
-    link to my youtube channel :-
-</h4>
-<a target ="_blank" href="https://www.youtube.com/@theboyscorners"> link to my youtube channel</a>
-
-
-
-<h1>WORKING SKILLS ON </h1><BR>
-<H2>LEARNING C++ WITH OOPS ALONG WITH DSA</H2>
-
-<DIV>
-    <H1>
-        EXTRA SKILLS = <BR>
-        YOUTUBE CHANNEL WORKING</BR>
-    </H1>
-</DIV>
-<div id="raj">
-    additional skills :- 
-    <br>
-    DRONE BOOTCAMP ON AERIAL MISSIONS CONDUSTED BY IIT DHANBAD.
+<span id="text">
+Hi  Welcome To My Portfolio 
+</span>
+</section> 
+<div class="content">
+<h3 id="skills">
+    **<br>
     
+ 1. Html Css And JavaScript
+</h3>
+
 </div>
+<div class="technical-skills">
+    <h2>
+        ** language learned<br>
+1. C AND C++ With Oop
+</h2>
+</div>
+<br>
+<div class="current">
+
+    CURRENTLY LEARNING :- <BR></BR>
+    JAVA WITH DSA 
+
+    </div>
+    
+    <section class="projects">
+        <h1>
+            Projects
+
+        </h1>
+        1.Hand ON experience on UAV drone conducted from iit ism dhanbad
+<br>
+2.Build a website for my college   to buy and sell
+<a href="https://geckolx.shop"><button>click here</button></a>
+    </section>
 </body>
 </html>
